--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>fileUploader</name>
     <description>fileUploader</description>
+    <developers>
+        <developer>
+            <id>ouharri</id>
+            <name>Outman Ouharri</name>
+            <email>ouharri.outman@gmail.com</email>
+        </developer>
+    </developers>
     <properties>
         <java.version>21</java.version>
     </properties>
@@ -25,10 +32,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.liquibase</groupId>-->
-<!--            <artifactId>liquibase-core</artifactId>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.liquibase</groupId>-->
+        <!--            <artifactId>liquibase-core</artifactId>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>org.postgresql</groupId>
