chore: Update server port, logging level, and Spring configuration
- Set server port to 8082
- Adjust logging level for 'org.springframework.beans.factory' to ERROR
- Configure Spring servlet for multipart file handling with a max file size of 10MB
- Configure Spring datasource for PostgreSQL with appropriate connection details
- Disable Docker Compose integration and specify the Docker Compose file as 'compose.yaml'
- Configure Liquibase change log file location
- Set JPA properties for Hibernate with ddl-auto as update, show SQL, and PostgreSQL database settings

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
       enabled: false
       file: compose.yaml
   datasource:
-    url: jdbc:postgresql://localhost:5432/fileUploader?useSSL=false
+    url: jdbc:postgresql://fileUploader-db:5432/fileUploader?useSSL=false
     username: postgres
     password: Youcode@2023
     driver-class-name: org.postgresql.Driver
