--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,5 @@
 services:
+
   postgres:
     image: 'postgres:latest'
     container_name: fileUploader-db
@@ -17,15 +18,25 @@ services:
     networks:
       - fileUploader
 
+  redis:
+    image: 'redis:latest'
+    container_name: fileUploader-redis
+    ports:
+      - "6379:6379"
+    restart: always
+    networks:
+      - fileUploader
+
   app:
     container_name: fileUploader-api
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8083:8084"
+      - "8083:8082"
     depends_on:
       - postgres
+      - redis
     restart: no
     networks:
       - fileUploader
