--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,10 @@ logging:
   level:
     org.springframework.beans.factory: ERROR
 
+redis:
+  host: redis
+  port: 6379
+
 spring:
   servlet:
     multipart:
@@ -15,7 +19,7 @@ spring:
       enabled: false
       file: compose.yaml
   datasource:
-    url: jdbc:postgresql://fileUploader-db:5432/fileUploader?useSSL=false
+    url: jdbc:postgresql://postgres:5432/fileUploader?useSSL=false
     username: postgres
     password: Youcode@2023
     driver-class-name: org.postgresql.Driver
