Configuration file (application.yml) for the FileUploader project, specifying server settings, logging levels, PostgreSQL database details, Redis parameters, and additional configurations for multipart file handling, Docker (disabled), and Liquibase database migrations.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,6 +10,10 @@ redis:
   port: 6379
 
 spring:
+  cache:
+    type: redis
+    redis:
+      time-to-live: 60000
   servlet:
     multipart:
       max-file-size: 10MB
