--- a/compose.yaml
+++ b/compose.yaml
@@ -10,11 +10,9 @@ services:
       - PGDATA=/data/postgres
     restart: always
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
-      - type: volume
-        source: postgres-db
-        target: /var/lib/postgresql/data
+      - postgres-db:/var/lib/postgresql/data
     networks:
       - fileUploader
 
