Configuration for a 3-container app (Postgres, Redis, app) with persistent data storage, IPv6 networking, and dependencies defined.

--- a/compose.yaml
+++ b/compose.yaml
@@ -35,7 +35,7 @@ services:
     depends_on:
       - postgres
       - redis
-    restart: no
+    restart: unless-stopped
     networks:
       - fileUploader
 
