--- a/compose.yaml
+++ b/compose.yaml
@@ -12,7 +12,7 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - postgres-db:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
     networks:
       - fileUploader
 
@@ -53,4 +53,3 @@ networks:
 volumes:
   postgres-db:
     driver: local
-    external: true
