Configuration file (application.yml) for the FileUploader project, specifying server settings, logging levels, PostgreSQL database details, Redis parameters, and additional configurations for multipart file handling, Docker (disabled), and Liquibase database migrations.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ spring:
       enabled: false
       file: compose.yaml
   datasource:
-    url: jdbc:postgresql://postgres:5432/fileUploader?useSSL=false
+    url: jdbc:postgresql://postgres:5432/fileUploader
     username: postgres
     password: Youcode@2023
     driver-class-name: org.postgresql.Driver
