Configuration for a 3-container app (Postgres, Redis, app) with persistent data storage, IPv6 networking, and dependencies defined.

--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,7 @@ services:
       - POSTGRES_USER=postgres
       - PGDATA=/data/postgres
     restart: always
+    hostname: postgres
     ports:
       - "5433:5432"
     volumes:
@@ -19,6 +20,7 @@ services:
   redis:
     image: 'redis:latest'
     container_name: fileUploader-redis
+    hostname: redis
     ports:
       - "6379:6379"
     restart: always
@@ -33,8 +35,10 @@ services:
     ports:
       - "8083:8082"
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_started
+      redis:
+        condition: service_started
     restart: unless-stopped
     networks:
       - fileUploader
@@ -48,7 +52,6 @@ networks:
     ipam:
       config:
         - subnet: 2001:0DB9::/112
-
 
 volumes:
   postgres-db:
