Configuration file (application.yml) for the FileUploader project, specifying server settings, logging levels, PostgreSQL database details, Redis parameters, and additional configurations for multipart file handling, Docker (disabled), and Liquibase database migrations.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ logging:
     org.springframework.beans.factory: ERROR
 
 redis:
-  host: fileUploader-redis
+  host: fileUploader-cache
   port: 6379
 
 spring:
