Configuration file (application.yml) for the FileUploader project, specifying server settings, logging levels, PostgreSQL database details, Redis parameters, and additional configurations for multipart file handling, Docker (disabled), and Liquibase database migrations.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,15 +5,16 @@ logging:
   level:
     org.springframework.beans.factory: ERROR
 
-redis:
-  host: fileUploader-cache
-  port: 6379
-
 spring:
   cache:
     type: redis
     redis:
       time-to-live: 60000
+  data:
+    redis:
+      database: 0
+      host: fileUploader-cache
+      port: 6379
   servlet:
     multipart:
       max-file-size: 10MB
